...
                navigateToDetail = navigateToDetail
            )
        } else {
            EmptyItem(
                warning = stringResource(R.string.empty_item),
                modifier = Modifier
                    .testTag("emptyItem")
            )
        }
    }
}

@OptIn(ExperimentalFoundationApi::class)
...
